# reinforcement_learning

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE.txt  Makefile  README.md  appveyor.yml  build-linux.sh  build-windows.cmd  ccb_v2.fb  readme.md  rl.sln  setup.py  test.py  vcpkg.json
benchmarks/: CMakeLists.txt  README.md  benchmark_cb_v2.cc  benchmark_ccb.cc  benchmark_common.cc  benchmark_common.h  benchmark_init.cc  benchmarks_common.cc  benchmarks_common.h
benchmarks/models/: cb_explore_adf_half.m  cb_explore_adf_small.m
bindings/cs/: CMakeLists.txt  rl.net.nuspec  rl.net.props
bindings/java_swig/: CMakeLists.txt  java.i  lib.cc  lib.h
bindings/python/: CMakeLists.txt  Makefile  README.md  main.cc  py_api.cc  py_api.h  rl_client.i  setup.py
doc/: CMakeLists.txt  layout.xml  readme.md
doc/cpp/: Doxyfile  api_error_codes.dox  build.dox  compression.dox
doc/python/: Doxyfile  python.dox
examples/basic_usage_cpp/: CMakeLists.txt  Makefile  basic_usage_cpp.cc  basic_usage_cpp.h  basic_usage_cpp.vcxproj  basic_usage_cpp.vcxproj.filters  client.json
examples/onnx/: CMakeLists.txt  onnx_example.cc  readme.md
examples/override_interface/: CMakeLists.txt  Makefile  override_interface.cc  override_interface.vcxproj  packages.config
examples/rl_sim_cpp/: CMakeLists.txt  Makefile  README.md  azure_credentials.cc  azure_credentials.h  client.json  current  local_loop.cc  local_loop.h  local_loop_client.json  main.cc  packages.config  person.cc  person.h  rand48.h  rl_sim.cc  rl_sim.h  rl_sim_cpp.h  rl_sim_cpp.vcxproj  rl_sim_cpp.vcxproj.filters  robot.cc  robot.h  robot_joint.cc  robot_joint.h  simulation_stats.h
examples/test_cpp/: CMakeLists.txt  Makefile  experiment_controller.cc  experiment_controller.h  main.cc  model.vw  options.cc  options.h  packages.config  test_cpp.vcxproj  test_cpp.vcxproj.filters  test_data_provider.cc  test_data_provider.h  test_loop.cc  test_loop.h
ext_libs/: CMakeLists.txt  ext_libs.cmake  libzstd.vcxproj
ext_libs/date/: CMakeLists.txt  date.h
ext_libs/fakeit/: CMakeLists.txt
ext_libs/string-view-lite/: CMakeLists.txt
external_parser/: CMakeLists.txt  README.md  example_joiner.cc  example_joiner.h  i_example_joiner.h  i_joiner.h  log_converter.cc  log_converter.h  lru_dedup_cache.cc  lru_dedup_cache.h  main.cc  multistep_example_joiner.cc  multistep_example_joiner.h  parse_example_binary.cc  parse_example_binary.h  parse_example_converter.cc  parse_example_converter.h  parse_example_external.cc  parse_example_external.h  reward.h  timestamp_helper.cc  timestamp_helper.h  topological_sorter.h  utils.cc  utils.h
external_parser/event_processors/: event.h  joined_event.h  loop.h  metadata.h  reward.h  timestamp_helper.cc  timestamp_helper.h  typed_events.h
external_parser/joiners/: example_joiner.cc  example_joiner.h  i_joiner.h  multistep_example_joiner.cc  multistep_example_joiner.h
external_parser/metrics/: metrics.h
external_parser/unit_tests/: CMakeLists.txt  test_client_and_enqueued_time.cc  test_common.cc  test_common.h  test_example_joiner.cc  test_log_converter.cc  test_lru_dedup_cache.cc  test_metrics.cc  test_reward_functions.cc  test_skip_learn.cc  test_timestamp_helper.cc  test_vw_binary_parser.cc  test_vw_external_parser.cc
nuget/: CMakeLists.txt  CreateNugetPackage.cmake  RLClientLibNative-v141-x64.0.1.0.targets  RLClientLibNative-v141-x64.targets  rlclientlib-x64.0.1.0.targets  rlclientlib-x64.targets  rlclientlib.nuspec.in  rlclientlib.targets  rlclientlib.targets.in
nuget/dotnet/: dotnetcore.nuspec  dotnetcore.nuspec.in  rl.net.nuspec  rl.net.props  rl.net.targets
nuget/test/: main.cc  test-v141.vcxproj  test-v142.vcxproj  test_rl_nuget.vcxproj
rlclientlib/: CMakeLists.txt  CMakeLists.txt.orig  Makefile  api_status.cc  azure_factories.cc  azure_factories.h  base_loop.cc  binding_tracer.cc  ca_loop.cc  cb_logger.cc  cb_logger_impl.cc  cb_logger_impl.h  cb_loop.cc  ccb_loop.cc  console_tracer.cc  console_tracer.h  constants.cc  content_encoding.cc  continuous_action_response.cc  decision_response.cc  dedup-internals.h  dedup.cc  dedup.h  dedup_internals.h  detailed_multi_slot_response.cpp  episodic_loop.cc  error_callback_fn.cc  events_sequence_id.cpp  events_sequence_id.h  factory_resolver.cc  generic_event.cc  generic_event.h  http_client.h  learning_mode.cc  live_model.cc  live_model_base.cc  live_model_ca.cc  live_model_cb.cc  live_model_ccb.cc  live_model_episodic.cc  (+31 more)
rlclientlib/deserialization/: example_joiner.cc  example_joiner.h  joined_log_parser.cc
rlclientlib/example_cache/: lru_dedup_cache.h
rlclientlib/extensions/: CMakeLists.txt
rlclientlib/federation/: apim_federated_client.cc  apim_federated_client.h  eud_utils.h  event_cache.cc  event_cache.h  event_sink.h  federated_client.h  federated_loop_controller.cc  federated_loop_controller.h  joined_log_provider.h  local_client.cc  local_client.h  local_loop_controller.cc  local_loop_controller.h  sender_joined_log_joiner.h  sender_joined_log_provider.cc  sender_joined_log_provider.h  vw_local_joiner.cc  vw_local_joiner.h  vw_trainable_model.cc  vw_trainable_model.h
rlclientlib/logger/: async_batcher.cc  async_batcher.h  (+24 more)
unit_test/: CMakeLists.txt  Makefile  api_status_test.cc  apim_http_auth_test.cc  async_batcher_test.cc  common_test_utils.h  configuration_test.cc  cpprest_http_client_test.cc  data.h  data_buffer_test.cc  data_callback_test.cc  dedup_test.cc  err_callback_test.cc  eud_test.cc  event_logger_test.cc  event_queue_test.cc  eventhub_client_test.cc  explore_test.cc  factory_test.cc  fb_parser_test.cc  fb_serializer_test.cc  federated_loop_controller_test.cc  file_logger_test.cc  header_auth_test.cc  http_client_test.cc  http_transport_client_test.cc  interaction.txt  json_context_parse_test.cc  json_serializer_test.cc  learning_mode_test.cc  live_model_test.cc  live_model_test_legacy.cc  local_client_test.cc  local_joiner_test.cc  local_loop_controller_test.cc  local_loop_end_to_end.cc  main.cc  mock_http_client.cc  mock_http_client.h  mock_util.cc  (+26 more)
(+557 files in other folders)
