add_subdirectory(fakeit)
add_subdirectory(date)

set(VW_INSTALL OFF CACHE BOOL "")
set(BUILD_TESTS OFF CACHE BOOL "")
set(BUILD_JAVA OFF CACHE BOOL "")
set(BUILD_PYTHON OFF CACHE BOOL "")
set(BUILD_DOCS OFF CACHE BOOL "")
set(WARNINGS OFF CACHE BOOL "")
add_subdirectory(vowpal_wabbit EXCLUDE_FROM_ALL)
if (USE_ZSTD)
    add_subdirectory(zstd/build/cmake EXCLUDE_FROM_ALL)
endif()
